App management (#71)
* apps api based management

* Dynamically start / stop created app relative self client

* inject path to .env config file

* fix all broken tests

* remove commented code

* update readme

---------
