# docs/swagger.yaml
@@ -30,6 +30,43 @@ definitions:
       username:
         type: string
     type: object
+  app.App:
+    properties:
+      callback:
+        description: Callback is the url that will be hit when a message is received.
+        type: string
+      created_at:
+        type: string
+      device_secret:
+        description: DeviceSecret is the secret key for the device created at the
+          developer portal.
+        type: string
+      env:
+        description: Env is self environment you want to point to, when empty, it
+          will default to production.
+        type: string
+      id:
+        description: AppID is the Self app self identifier.
+        type: string
+      name:
+        description: Name is the Self app name.
+        type: string
+      updated_at:
+        type: string
+    type: object
+  app.CreateAppRequest:
+    properties:
+      callback:
+        type: string
+      env:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      secret:
+        type: string
+    type: object
   app.app:
     properties:
       id:
@@ -105,6 +142,30 @@ definitions:
         type: integer
       total_count:
         type: integer
+    type: object
+  entity.App:
+    properties:
+      callback:
+        description: Callback is the url that will be hit when a message is received.
+        type: string
+      created_at:
+        type: string
+      device_secret:
+        description: DeviceSecret is the secret key for the device created at the
+          developer portal.
+        type: string
+      env:
+        description: Env is self environment you want to point to, when empty, it
+          will default to production.
+        type: string
+      id:
+        description: AppID is the Self app self identifier.
+        type: string
+      name:
+        description: Name is the Self app name.
+        type: string
+      updated_at:
+        type: string
     type: object
   entity.Attestation:
     properties:
@@ -399,6 +460,30 @@ paths:
       summary: List apps.
       tags:
       - apps
+    post:
+      consumes:
+      - application/json
+      description: Creates a new app and sends a request for public information. You
+        must be authenticated as an admin.
+      parameters:
+      - description: query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/app.CreateAppRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.App'
+      security:
+      - BearerAuth: []
+      summary: Creates a new app.
+      tags:
+      - app
   /apps/{app_id}/connections:
     get:
       consumes:
@@ -894,6 +979,36 @@ paths:
       summary: Get request details.
       tags:
       - requests
+  /apps/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes an existing app and sends a request for public information
+        and avoids incoming comms from that app. You must be authenticated as an admin.
+      parameters:
+      - description: current app id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/app.CreateAppRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.App'
+      security:
+      - BearerAuth: []
+      summary: Deletes an existing app.
+      tags:
+      - apps
   /healthcheck:
     get:
       consumes:
